# safe-vex

./: Cargo.toml  README.md  armv7a-vex-eabi.json  flake.nix  project.pros  rust-toolchain
.cargo/: config.toml
scripts/: upload.sh
src/: adi.rs  allocator.rs  bind.rs  bindings.rs  bot.rs  context.rs  controller.rs  entry.rs  error.rs  fs.rs  imu.rs  io.rs  lib.rs  log.rs  macros.rs  main.rs  maybe.rs  motor.rs  pile.rs  port.rs  prelude.rs  rotation.rs  rtos.rs  vex_rt.rs
src/controller/: joystick.rs
src/macros/: colour_format.rs  entry.rs
