[package]
name = "safe-vex"
version = "4.0.0-indev"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A modular, safe and data-orientated rust wrapper over the Purdue PROS library for vex"
authors = ["kalscium <kalscium@protonmail.com>"]
repository = "https://github.com/kalscium/safe-vex"
keywords = [ "robot", "robotics", "vex", "v5", "vrc" ]
categories = [ "no-std", "external-ffi-bindings", "hardware-support", "api-bindings" ]
readme = "README.md"
build = "build/main.rs"

[lib]
name = "safe_vex"
path = "src/lib.rs"

[dependencies]
libc = { version = "0.2.159", default-features = false }
libc-print = "0.1.23"

[build-dependencies]
zip = "2.2.0"
zip-extensions = "0.8.1"
bindgen = "0.70.1"
