[package]
name = "safe-vex"
version = "4.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A modular, safe and data-orientated rust wrapper over the Purdue PROS library for Vex Robotics"
authors = ["kalscium <kalscium@protonmail.com>"]
repository = "https://github.com/kalscium/safe-vex"
keywords = [ "vex-robotics", "robotics", "vex", "vex-v5", "vex-vrc" ]
categories = [ "no-std", "external-ffi-bindings", "hardware-support", "api-bindings", "science::robotics" ]
readme = "README.md"
build = "build/main.rs"

[lib]
name = "safe_vex"
path = "src/lib.rs"

[dependencies]
libc = { version = "0.2", default-features = false }
libc-print = "0.1"
newlib-alloc = "0.1"
byte-strings = "0.3"

[build-dependencies]
zip = "2.2"
zip-extensions = "0.8"
bindgen = "0.70"
